--- a/buttons.html
+++ b/buttons.html
@@ -3,12 +3,16 @@
         background-color: rgb(199, 0, 0);
         color:white;
         border:none;
-        height: 36px;
-        width: 105px;
         border-radius: 2px;
         cursor: pointer;
-        margin-right: 15px;
+        margin-right: 30px;
+        margin-left: 100px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 16px;
+        padding-right: 16px;
         transition: opacity 0.20s;
+        vertical-align: top;
     }
     .subscribe-button:hover {
         opacity: 0.7;
@@ -22,22 +26,25 @@
 <style>
     .join-button {
         background-color: white;
-        color:blue;
+        color: rgb(6,95,212);
         border: black;
         border-style: solid;
-        border-color: rgb(0, 0, 156);
-        height: 36px;
-        width: 62px;
+        border-color: rgb(6,95,212);
         border-radius: 2px;
         border-width: 1px;
         cursor:pointer;
-        margin-right: 15px;
+        margin-right: 30px;
+        padding-top: 9px;
+        padding-bottom: 9px;
+        padding-left: 16px;
+        padding-right: 16px;
         transition: opacity 0.20s;
         transition: background-color 1s,
         color 1s;
+        vertical-align: top;
     }
     .join-button:hover{
-        background-color:blue;
+        background-color:rgb(6,95,212);
         color:white;    
     }
     .join-button:active{
@@ -49,7 +56,7 @@
 
 <style>
     .tweet-button{
-        background-color: rgb(84, 161, 224);
+        background-color: rgb(29,155,240);
         color:rgb(245, 244, 244);
         border:none;
         height: 36px;
@@ -59,6 +66,7 @@
         font-size:15px;
         cursor: pointer;
         transition:box-shadow 0.15s;
+        vertical-align: top;
     }
     .tweet-button:hover{
         box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
