Some documentation improvements

--- a/buttons.html
+++ b/buttons.html
@@ -1,78 +1,21 @@
-<style>
-    .subscribe-button {
-        background-color: rgb(199, 0, 0);
-        color:white;
-        border:none;
-        border-radius: 2px;
-        cursor: pointer;
-        margin-right: 30px;
-        margin-left: 100px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 16px;
-        padding-right: 16px;
-        transition: opacity 0.20s;
-        vertical-align: top;
-    }
-    .subscribe-button:hover {
-        opacity: 0.7;
-    }
-    .subscribe-button:active{
-        opacity: 0.3;
-    }
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Practice Buttons</title>
+        <link rel="stylesheet" href="styles/buttons.css">
+    </head>
+
+    <body>
+        <button class="subscribe-button">SUBSCRIBE</button>
+        <button class="join-button">JOIN</button>
+        <button class="tweet-button">TWEET</button>
+    </body>
+</html>
 
 
-</style>
-<style>
-    .join-button {
-        background-color: white;
-        color: rgb(6,95,212);
-        border: black;
-        border-style: solid;
-        border-color: rgb(6,95,212);
-        border-radius: 2px;
-        border-width: 1px;
-        cursor:pointer;
-        margin-right: 30px;
-        padding-top: 9px;
-        padding-bottom: 9px;
-        padding-left: 16px;
-        padding-right: 16px;
-        transition: opacity 0.20s;
-        transition: background-color 1s,
-        color 1s;
-        vertical-align: top;
-    }
-    .join-button:hover{
-        background-color:rgb(6,95,212);
-        color:white;    
-    }
-    .join-button:active{
-        opacity: 0.7;
-    }
-</style>
 
-    
 
-<style>
-    .tweet-button{
-        background-color: rgb(29,155,240);
-        color:rgb(245, 244, 244);
-        border:none;
-        height: 36px;
-        width: 74px;
-        border-radius: 18px;
-        font-weight: bold;
-        font-size:15px;
-        cursor: pointer;
-        transition:box-shadow 0.15s;
-        vertical-align: top;
-    }
-    .tweet-button:hover{
-        box-shadow: 5px 5px 10px rgba(0,0,0,0.15);
-    }
-</style>
 
-<button class="subscribe-button">SUBSCRIBE</button>
-<button class="join-button">JOIN</button>
-<button class="tweet-button">TWEET</button>
+
+
+
