Minor text improvements

--- a/youtube-clone/text.html
+++ b/youtube-clone/text.html
@@ -40,7 +40,7 @@
         }
         .video-info{
             display: inline-block;
-            width: 200px;
+            width: 245px;
         }
         .profile-picture{
             width: 40px;
@@ -80,11 +80,21 @@
 </div>
 
 <div class="video-preview">
-    <img class="thumbnail" src="thumbnails/image2.jpg">
-    
-    <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
-    <p class="video-author">freeCodeCamp.org  </p>
-    <p class="video-stats">204B views &#183; 3 weeks ago</p>
+    <div class="thumbnail-row">
+        <img class="thumbnail" src="thumbnails/image2.jpg">
+    </div>
+    <div>
+        <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/chan2.jpg">
+        </div>
+        <div class="video-info">
+            <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+            <p class="video-author">freeCodeCamp.org</p>
+            <p class="video-stats">204B views &#183; 3 weeks ago</p>
+        </div>
+    </div>
 </div>
+
+
 </body>
 </html> 
