Sidebar will be added

--- a/youtube-clone/youtube.html
+++ b/youtube-clone/youtube.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 <body>
     <div class="header">
@@ -31,7 +32,9 @@
             <img class="notifications-icon" src="icons/notifications.svg">
             <img class="current-user-picture" src="channel-pictures/ownchan.jpg">
         </div>
-        
+        <div class="sidebar">
+            sidebar
+        </div>
     </div>
 <div class="video-grid">
     <div class="video-preview">
