search bar works now

--- a/youtube-clone/index.html
+++ b/youtube-clone/index.html
@@ -4,12 +4,12 @@
     <title>Youtube Clone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
     <link rel="stylesheet" href="styles/sidebar.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="header">
@@ -18,7 +18,7 @@
             <img class="youtube-logo" src="icons/youtube-logo.svg">
         </div>
         <div class="middle-section">
-            <input class="search-box" type="text" placeholder="Search">
+            <input class="search-box" id="search-bar" type="text" placeholder="Search" onkeyup="search()">
             <button class="search-button">
                 <img class="search-icon" src="icons/search.svg">
             </button>
@@ -63,7 +63,7 @@
         </div>
     </div>
     <main>
-        <section class="video-grid">
+        <section class="video-grid" id="video-grid">
             <div class="video-preview">
                 <div class="thumbnail-row">
                     <img class="thumbnail" src="thumbnails/image1.jpg">
@@ -165,11 +165,110 @@
                     </div>
                 </div>
             </div>
+
+            <div class="video-preview">
+                <div class="thumbnail-row">
+                    <img class="thumbnail" src="thumbnails/image2.jpg">
+                    <div class="video-time"> 7:50  </div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channel-pictures/chan2.jpg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+                        <p class="video-author">freeCodeCamp.org</p>
+                        <p class="video-stats">204B views &#183; 3 weeks ago</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-preview">
+                <div class="thumbnail-row">
+                    <img class="thumbnail" src="thumbnails/image2.jpg">
+                    <div class="video-time"> 7:50  </div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channel-pictures/chan2.jpg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+                        <p class="video-author">freeCodeCamp.org</p>
+                        <p class="video-stats">204B views &#183; 3 weeks ago</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-preview">
+                <div class="thumbnail-row">
+                    <img class="thumbnail" src="thumbnails/image2.jpg">
+                    <div class="video-time"> 7:50  </div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channel-pictures/chan2.jpg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+                        <p class="video-author">freeCodeCamp.org</p>
+                        <p class="video-stats">204B views &#183; 3 weeks ago</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-preview">
+                <div class="thumbnail-row">
+                    <img class="thumbnail" src="thumbnails/image2.jpg">
+                    <div class="video-time"> 7:50  </div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channel-pictures/chan2.jpg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+                        <p class="video-author">freeCodeCamp.org</p>
+                        <p class="video-stats">204B views &#183; 3 weeks ago</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-preview">
+                <div class="thumbnail-row">
+                    <img class="thumbnail" src="thumbnails/image2.jpg">
+                    <div class="video-time"> 7:50  </div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channel-pictures/chan2.jpg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+                        <p class="video-author">freeCodeCamp.org</p>
+                        <p class="video-stats">204B views &#183; 3 weeks ago</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-preview">
+                <div class="thumbnail-row">
+                    <img class="thumbnail" src="thumbnails/image2.jpg">
+                    <div class="video-time"> 7:50  </div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channel-pictures/chan2.jpg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">Python for Beginners  Full Course [Programming Tutorial]</p>
+                        <p class="video-author">freeCodeCamp.org</p>
+                        <p class="video-stats">204B views &#183; 3 weeks ago</p>
+                    </div>
+                </div>
+            </div>
         
         <section>
     </main>
-
-
-
 </body>
 </html> 
